--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto" *ngIf="loggedIn">
+          <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
             <!-- <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li> -->
@@ -19,22 +19,26 @@
               <a class="nav-link" href="#">Messages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" (click)="logout()" href="#">Logout</a>
+              <a class="nav-link" href="#">About Angular</a>
             </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" (click)="logout()">Logout</a>
+            </li> -->
             <!-- <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li> -->
           </ul>
 
-          <div class="dropdown" *ngIf="loggedIn">
-            <a class="dropdown-toggle text-light">Welcome user</a>
-            <div class="dropdown-menu">
+          <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
+            <a dropdownToggle class="dropdown-toggle text-light">Welcome user</a>
+            <div *dropdownMenu class="dropdown-menu mt-3">
               <a class="dropdown-item">Edit Profile</a>
-              <a class="dropdown-item" (click)="logout">Logout</a>
+              <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
           </div>
 
-          <form *ngIf="!loggedIn" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()"
+          <!-- <form #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" -->
+          <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()"
             autocomplete="off">
             <input
               name="username"
