End of section 6

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,9 +3,10 @@
 <div class="container">
   <!-- Navbar -->
 
-  <div class="row mt-5">
+  <div class="row mt-5 pt-5">
     <div class="col-12">
-      <app-home></app-home>
+      <!-- <app-home></app-home> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
