--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,37 +1,39 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-info">
     <div class="container">
-        <a class="navbar-brand" href="/">Dating App</a>
+        <a class="navbar-brand" routerLink='/'>Dating App</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
-            <!-- <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li> -->
-            <li class="nav-item">
-              <a class="nav-link" href="#">Matches</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Lists</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Messages</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Angular</a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" (click)="logout()">Logout</a>
-            </li> -->
-            <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
+          <ul class="navbar-nav mr-auto">
+            <ng-container *ngIf="(accountService.currentUser$ | async)">
+              <!-- <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li> -->
+              <li class="nav-item">
+                <a class="nav-link" routerLink='/members' routerLinkActive='active'>Matches</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink='/lists' routerLinkActive='active'>Lists</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink='/about-angular' routerLinkActive='active'>About Angular</a>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" (click)="logout()">Logout</a>
+              </li> -->
+              <!-- <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li> -->
+            </ng-container>
           </ul>
 
-          <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-            <a dropdownToggle class="dropdown-toggle text-light">Welcome user</a>
-            <div *dropdownMenu class="dropdown-menu mt-3">
+          <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+            <a dropdownToggle class="dropdown-toggle text-light">Welcome {{user.username}}</a>
+            <div *dropdownMenu class="dropdown-menu mt-3 bg-info dropdown-menu-dark">
               <a class="dropdown-item">Edit Profile</a>
               <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
@@ -53,8 +55,11 @@
               type="password"
               placeholder="Password"
               aria-label="Password">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+            <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
           </form>
         </div>
     </div>
   </nav>
+
+
+  
